tests/suppress_incremental/suppress_incremental.exp
After start:
No errors!

After introducing an error:
Error: test.js:3
  3: (123: string); // error
      ^^^ Cannot cast `123` to string because number [1] is incompatible with string [2].
  References:
    3: (123: string); // error
        ^^^ [1]: number
    3: (123: string); // error
             ^^^^^^ [2]: string


Found 1 error

After suppressing the error:
No errors!

After fixing the error, leaving the suppression:
Warning: test.js:3
  3: // $FlowIssue
     ^^^^^^^^^^^^^ Unused suppression comment.


Found 1 warning

After removing the unused suppression:
No errors!
